user menu's alignment issue fixed

--- a/docroot/sites/all/themes/ambitious/css/ambitious.css
+++ b/docroot/sites/all/themes/ambitious/css/ambitious.css
@@ -10352,6 +10352,11 @@ div#admin-toolbar.vertical div.admin-tab {
   margin-bottom: -4px;
 }
 
+/* line 52, ../scss/_header.scss */
+#block-system-user-menu li.last {
+  padding-right: 0;
+}
+
 /* line 3, ../scss/_wrapper.scss */
 #wrapper {
   background: #eef2f3;
