--- a/docroot/sites/all/themes/ambitious/scss/_header.scss
+++ b/docroot/sites/all/themes/ambitious/scss/_header.scss
@@ -47,3 +47,8 @@
 #header.fixed-position{
 	margin-bottom: -4px;
 }
+
+// User menu
+#block-system-user-menu li.last{
+	padding-right: 0;
+}
